--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "note-taker",
+  "name": "marcs-note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "uuid": "^8.3.2"
   }
 }
